--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Hank Quinlan, Horrible Cop
+name: Building Accessibility Blog
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 
